--- a/Diagram/app/src/main/res/menu/navigation.xml
+++ b/Diagram/app/src/main/res/menu/navigation.xml
@@ -16,4 +16,9 @@
         android:icon="@drawable/ic_person_black_24dp"
         android:title="@string/title_profile" />
 
+    <item
+        android:id="@+id/navigation_post"
+        android:icon="@drawable/ic_add_black_24dp"
+        android:title="@string/title_add_post" />
+
 </menu>
