--- a/Diagram/app/src/main/res/layout/activity_main.xml
+++ b/Diagram/app/src/main/res/layout/activity_main.xml
@@ -54,11 +54,11 @@
         </LinearLayout>
 
         <EditText
-            android:id="@+id/email"
+            android:id="@+id/username"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:hint="Email"/>
+            android:hint="Username"/>
 
         <EditText
             android:id="@+id/password"
