--- a/Diagram/app/src/main/res/layout/fragment_feed.xml
+++ b/Diagram/app/src/main/res/layout/fragment_feed.xml
@@ -5,10 +5,10 @@
     android:layout_height="match_parent"
     tools:context=".view.FeedFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view_posts"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Feed" />
+        />
 
 </FrameLayout>
