--- a/Diagram/app/src/main/res/layout/activity_main.xml
+++ b/Diagram/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
 
 
 
+
     >
     <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
@@ -20,6 +21,7 @@
         card_view:cardCornerRadius="6dp"
         card_view:cardElevation="3dp"
         card_view:cardUseCompatPadding="true"
+
        >
 
 
@@ -30,7 +32,10 @@
             android:orientation="vertical"
             android:padding="20dp"
 
+
             >
+
+
 
         <LinearLayout
 
@@ -40,14 +45,20 @@
             android:orientation="horizontal"
             >
 
+           <ImageView
+               android:layout_width="50dp"
+               android:layout_height="50dp"
+               android:src="@drawable/ic_local_hospital_black_24dp"/>
+
+
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Login"
+                android:text="DiaGram"
                 android:textSize="35sp"
                 android:layout_gravity="center_horizontal"
-                android:textStyle="bold"
+
                 android:layout_marginTop="5dp"
 
                 />
