--- a/Diagram/app/src/main/res/layout/activity_navigation.xml
+++ b/Diagram/app/src/main/res/layout/activity_navigation.xml
@@ -10,7 +10,11 @@
    <com.example.ewd.diagram.utils.CustomViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
-       android:layout_height="match_parent">
+       android:layout_height="match_parent"
+       app:layout_constraintBottom_toTopOf="@+id/navigation"
+
+
+       >
 
    </com.example.ewd.diagram.utils.CustomViewPager>
 
