--- a/Diagram/app/src/main/res/layout/post_item.xml
+++ b/Diagram/app/src/main/res/layout/post_item.xml
@@ -23,7 +23,7 @@
             android:layout_height="40dp"
             android:id="@+id/user_type_image_view"
             android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"/>
+            android:layout_marginTop="12dp"/>
 
 
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -41,6 +41,7 @@
                 android:text="Am I taking the right meds?"
                 android:textStyle="bold"
                 android:textSize="15sp"
+                android:paddingBottom="5dp"
 
 
                 />
@@ -49,7 +50,7 @@
             <!--This View serves as a visual divider between list items-->
             <View
                 android:layout_width="match_parent"
-                android:layout_height="2dp"
+                android:layout_height="1dp"
                 android:background="@color/colorPrimary"
 
                 android:layout_marginRight="8dp" />
@@ -58,7 +59,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
 
-                android:paddingTop="3dp"
+                android:paddingTop="5dp"
                 android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."
 
                 android:layout_marginBottom="6dp"
